# Ollama_TUI

./: README.md  pyproject.toml  requirements.txt
src/: ai_connect.py  main.py  main.tcss  s.scss  ui.py  ui.tcss
