[project]
name = 'Ollama_TUI'
version = '0.0.2'
description = 'Text-based User Interface (TUI) for work to Ollama LLM model'
readme = 'README.md'
authors = [
{name = "TheDocingEast", email = 'thedocingwork@gmail.com'}
]
  license = {text = "MIT"}
requires-python = ">=3.10"

dependencies [
"textual>=6.3.0"
"textual-fspicker>=0.6.0"
"textual-image>=0.8.4"
"ollama>=0.6.0"
"pillow>=12.0.0"
"rich>=14.2.0"
]

[project.urls]
Homepage = "https://github.com/TheDocingEast/Ollama_TUI"
Repository = "https://github.com/TheDocingEast/Ollama_TUI"
Issues = "https://github.com/TheDocingEast/Ollama_TUI/issues"

[tool.uv]
# This section is used by uv for reproducible environments
# You can pin interpreter version or control sync behavior
managed = true

[tool.textual]
# Optional: entrypoint for running via `textual run`
script = "src/main.py"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
